--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -3,7 +3,7 @@
   yum:
     name: docker
     state: present
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
   notify: Restart Docker
 
 - name: Start and enable Docker (Amazon Linux)
@@ -11,20 +11,64 @@
     name: docker
     enabled: yes
     state: started
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
 
-- name: Add Docker GPG key (Ubuntu/Debian)
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-  when: ansible_os_family == "Debian"
+- name: Set Docker architecture
+  set_fact:
+    docker_arch: "{{ 'arm64' if (ansible_facts['architecture'] == 'aarch64' or ansible_facts['architecture'] == 'arm64') else 'amd64' }}"
 
-- name: Add Docker repository (Ubuntu/Debian)
+- name: Ensure apt keyrings directory exists
+  file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Download and import Docker GPG key (Ubuntu/Debian)
+  shell: |
+    install -m 0755 -d /etc/apt/keyrings
+    timeout 30 curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /tmp/docker.gpg
+    gpg --dearmor < /tmp/docker.gpg > /etc/apt/keyrings/docker.gpg
+    chmod a+r /etc/apt/keyrings/docker.gpg
+    rm -f /tmp/docker.gpg
+  args:
+    creates: /etc/apt/keyrings/docker.gpg
+  async: 60
+  poll: 5
+  when: ansible_facts['os_family'] == "Debian"
+  changed_when: true
+
+- name: Remove all existing Docker repositories
+  shell: |
+    timeout 10 bash -c 'rm -f /etc/apt/sources.list.d/docker*.list /etc/apt/sources.list.d/*docker*.list'
+  async: 20
+  poll: 2
+  when: ansible_facts['os_family'] == "Debian"
+  failed_when: false
+  changed_when: true
+
+- name: Add Docker repository (Ubuntu/Debian) - ARM64
   apt_repository:
-    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    repo: "deb [arch=arm64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_facts['distribution_release'] }} stable"
     state: present
+    update_cache: no
+    filename: docker
+  when: ansible_facts['os_family'] == "Debian" and (ansible_facts['architecture'] == 'aarch64' or ansible_facts['architecture'] == 'arm64')
+
+- name: Update apt cache after adding Docker repository
+  apt:
     update_cache: yes
-  when: ansible_os_family == "Debian"
+    cache_valid_time: 3600
+    allow_unauthenticated: no
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Add Docker repository (Ubuntu/Debian) - x86_64
+  apt_repository:
+    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_facts['distribution_release'] }} stable"
+    state: present
+    update_cache: no
+    filename: docker
+  when: ansible_facts['os_family'] == "Debian" and ansible_facts['architecture'] == 'x86_64'
 
 - name: Install Docker (Ubuntu/Debian)
   apt:
@@ -35,8 +79,8 @@
       - docker-buildx-plugin
       - docker-compose-plugin
     state: present
-    update_cache: yes
-  when: ansible_os_family == "Debian"
+    update_cache: no
+  when: ansible_facts['os_family'] == "Debian"
   notify: Restart Docker
 
 - name: Configure Docker daemon
