--- a/ansible/roles/nodejs/tasks/main.yml
+++ b/ansible/roles/nodejs/tasks/main.yml
@@ -1,17 +1,19 @@
 ---
 - name: Check if curl is installed (Amazon Linux)
   command: which curl
+  async: 10
+  poll: 1
   register: curl_check
   changed_when: false
   failed_when: false
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Install Node.js prerequisites (Amazon Linux)
   yum:
     name:
       - curl
     state: present
-  when: ansible_os_family == "RedHat" and curl_check.rc != 0
+  when: ansible_facts['os_family'] == "RedHat" and curl_check.rc != 0
 
 - name: Install Node.js prerequisites (Ubuntu/Debian)
   apt:
@@ -19,26 +21,67 @@
       - curl
       - gnupg
     state: present
-  when: ansible_os_family == "Debian"
+  when: ansible_facts['os_family'] == "Debian"
 
-- name: Add NodeSource GPG key (Ubuntu/Debian)
-  apt_key:
-    url: https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key
-    state: present
-  when: ansible_os_family == "Debian"
+- name: Set Node.js architecture
+  set_fact:
+    nodejs_arch: "{{ 'arm64' if (ansible_facts['architecture'] == 'aarch64' or ansible_facts['architecture'] == 'arm64') else 'amd64' }}"
 
-- name: Add NodeSource repository (Ubuntu/Debian)
+- name: Ensure apt keyrings directory exists
+  file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Remove all existing NodeSource repositories
+  shell: |
+    timeout 10 bash -c 'rm -f /etc/apt/sources.list.d/*nodesource*.list'
+  async: 20
+  poll: 2
+  when: ansible_facts['os_family'] == "Debian"
+  failed_when: false
+  changed_when: true
+
+- name: Download and import NodeSource GPG key (Ubuntu/Debian)
+  shell: |
+    timeout 30 bash -c 'curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg'
+    chmod a+r /etc/apt/keyrings/nodesource.gpg
+  args:
+    creates: /etc/apt/keyrings/nodesource.gpg
+  async: 60
+  poll: 5
+  when: ansible_facts['os_family'] == "Debian"
+  changed_when: true
+
+- name: Add NodeSource repository (Ubuntu/Debian) - ARM64
   apt_repository:
-    repo: "deb https://deb.nodesource.com/node_{{ nodejs_version | default('20') }}.x nodistro main"
+    repo: "deb [arch=arm64 signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_{{ nodejs_version | default('20') }}.x nodistro main"
     state: present
-  when: ansible_os_family == "Debian"
+    update_cache: no
+    filename: nodesource
+  when: ansible_facts['os_family'] == "Debian" and (ansible_facts['architecture'] == 'aarch64' or ansible_facts['architecture'] == 'arm64')
+
+- name: Add NodeSource repository (Ubuntu/Debian) - x86_64
+  apt_repository:
+    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_{{ nodejs_version | default('20') }}.x nodistro main"
+    state: present
+    update_cache: no
+    filename: nodesource
+  when: ansible_facts['os_family'] == "Debian" and ansible_facts['architecture'] == 'x86_64'
+
+- name: Update apt cache after adding NodeSource repository
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: Install Node.js (Ubuntu/Debian)
   apt:
     name: nodejs
     state: present
-    update_cache: yes
-  when: ansible_os_family == "Debian"
+    update_cache: no
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: Install Node.js (Amazon Linux)
   yum:
@@ -46,7 +89,7 @@
       - nodejs
       - npm
     state: present
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Install PM2 globally
   npm:
@@ -55,7 +98,9 @@
     state: present
 
 - name: Setup PM2 startup script
-  command: pm2 startup systemd -u {{ app_user | default('yocto') }} --hp {{ app_home | default('/opt/yocto_builder') }}
+  command: timeout 30 pm2 startup systemd -u {{ app_user | default('yocto') }} --hp {{ app_home | default('/opt/yocto_builder') }}
   args:
     creates: /etc/systemd/system/pm2-{{ app_user | default('yocto') }}.service
+  async: 60
+  poll: 5
 
