--- a/ansible/roles/yocto_builder/handlers/main.yml
+++ b/ansible/roles/yocto_builder/handlers/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: restart application
-  command: pm2 restart yocto-builder
+  shell: |
+    pm2 delete yocto-builder || true
+    pm2 start ecosystem.config.js --only yocto-builder
   args:
     chdir: "{{ app_home }}/app"
   become: yes
