--- a/docker/poky/Dockerfile.scarthgap
+++ b/docker/poky/Dockerfile.scarthgap
@@ -1,5 +1,6 @@
 # docker/poky/Dockerfile.scarthgap
-FROM ubuntu:22.04
+# Use multi-platform base image
+FROM --platform=$BUILDPLATFORM ubuntu:22.04
 
 LABEL maintainer="Yocto Builder"
 LABEL yocto.version="scarthgap"
